--- a/pages/movies/movie-detail/movie-detail.wxml
+++ b/pages/movies/movie-detail/movie-detail.wxml
@@ -18,6 +18,9 @@
             </view>
         </view>
     </view>
+    
+        <image class="movie-img" src="{{movie.movieImg}}" data-src="{{movie.movieImg}}" catchtap="viewMoviePostImg" />
+    
     <view class='summary'>
         <text class='summary-title'>{{movie.originalTitle}}</text>
         <view class='viewer'>
@@ -43,16 +46,16 @@
             <text>{{movie.summary}}</text>
         </view>
     </view>
-	<view class="cast">
-		<text class="cast-font"> 影人</text>
-		<scroll-view class="cast-imgs" scroll-x="true" style="width:100%">
-			<block wx:for="{{movie.castsInfo}}" wx:for-item="item">
-				<view class="cast-container">
-					<image class="cast-img" src="{{item.img}}"></image>
-					<text class="cast-name">{{item.name}}</text>
-				</view>
-			</block>
-		</scroll-view>
-	</view>
+    <view class="cast">
+        <text class="cast-font"> 影人</text>
+        <scroll-view class="cast-imgs" scroll-x="true" style="width:100%">
+            <block wx:for="{{movie.castsInfo}}" wx:for-item="item">
+                <view class="cast-container">
+                    <image class="cast-img" src="{{item.img}}"></image>
+                    <text class="cast-name">{{item.name}}</text>
+                </view>
+            </block>
+        </scroll-view>
+    </view>
 
 </view>
