--- a/pages/movies/movie-detail/movie-detail.wxss
+++ b/pages/movies/movie-detail/movie-detail.wxss
@@ -54,6 +54,14 @@
     color: #f21146;
 }
 
+.movie-img{
+    height:238rpx;
+    width: 175rpx;
+    position: absolute;
+    top:160rpx;
+    right: 30rpx;
+}
+
 .summary {
     width: 100%;
     height: 320rpx;
